# MeowDiff

./: AGENTS.md  Cargo.toml  README.md
docs/: requirements.md  tech-spec.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/ignore/: mod.rs
src/models/: mod.rs
src/pipeline/: mod.rs
src/runtime/: mod.rs
src/storage/: mod.rs
src/util/: mod.rs
src/watcher/: lock.rs  microbatch.rs  mod.rs
tests/: cli_smoke.rs
